--- a/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model IEnumerable<ScreenMusic.Arguments.OutputArtist>
+﻿@model IEnumerable<OutputArtist>
 @{
     ViewData["Title"] = "Artistas";
 }
