--- a/ScreenMusic.WebMvc/Views/MusicGenre/Create.cshtml
+++ b/ScreenMusic.WebMvc/Views/MusicGenre/Create.cshtml
@@ -1,5 +1,4 @@
-﻿@using ScreenMusic.Arguments
-@model InputCreateMusicGenre
+﻿@model InputCreateMusicGenre
 @{
     ViewData["Title"] = "Cadastro do Gênero Musical";
 }
