--- a/ScreenMusic.WebMvc/Views/MusicGenre/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/MusicGenre/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@using ScreenMusic.Arguments
-@model IEnumerable<OutputMusicGenre>
+﻿@model IEnumerable<OutputMusicGenre>
 @{
     ViewData["Title"] = "Gêneros Musicais";
 }
