--- a/ScreenMusic.WebMvc/Views/MusicGenre/Update.cshtml
+++ b/ScreenMusic.WebMvc/Views/MusicGenre/Update.cshtml
@@ -1,5 +1,4 @@
-﻿@using ScreenMusic.Arguments
-@model InputUpdateMusicGenre
+﻿@model InputUpdateMusicGenre
 @{
     ViewData["Title"] = "Edição de Gênero Musical";
 }
