--- a/ScreenMusic.WebMvc/Views/Artist/Create.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Create.cshtml
@@ -1,4 +1,4 @@
-﻿@model ScreenMusic.Arguments.InputCreateArtist
+﻿@model InputCreateArtist
 @{
     ViewData["Title"] = "Cadastro do Artista";
 }
@@ -8,13 +8,13 @@
 
     <form asp-action="Create" method="post" enctype="multipart/form-data">
         <div class="form-group">
-            <label asp-for="Name"></label>
+            <label asp-for="Name">Nome</label>
             <input asp-for="Name" class="form-control" placeholder="Nome do Artista" required />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
 
         <div class="form-group">
-            <label asp-for="Biography"></label>
+            <label asp-for="Biography">Biografia</label>
             <textarea asp-for="Biography" class="form-control" placeholder="Biografia do artista" rows="4" required></textarea>
             <span asp-validation-for="Biography" class="text-danger"></span>
         </div>
