--- a/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
+++ b/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>@ViewData["Title"] - ScreenMusic</title>
     <link rel="stylesheet" href="~/lib/bootstrap/dist/css/bootstrap.min.css" />
+    <link rel="icon" type="image/png" href="images/favicon.png" />
     <link rel="stylesheet" href="~/css/site.css" asp-append-version="true" />
     <link rel="stylesheet" href="~/ScreenMusic.WebMvc.styles.css" asp-append-version="true" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
@@ -15,6 +16,7 @@
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-2 sidebar">
+                <h4 class="nav-link">ScreenMusic</h4>
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">
