--- a/ScreenMusic.WebMvc/Views/_ViewImports.cshtml
+++ b/ScreenMusic.WebMvc/Views/_ViewImports.cshtml
@@ -1,3 +1,3 @@
 ﻿@using ScreenMusic.WebMvc
-@using ScreenMusic.WebMvc.Models
+@using ScreenMusic.Arguments
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
