--- a/ScreenMusic.WebMvc/Views/Music/Create.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/Create.cshtml
@@ -12,7 +12,15 @@
             <input asp-for="Name" class="form-control" placeholder="Nome da Música" required />
             <span asp-validation-for="Name" class="text-danger"></span>
         </div>
-        
+
+        <br/>
+
+        <div class="form-group">
+            <label asp-for="YoutubeLink">Link do Youtube</label>
+            <input asp-for="YoutubeLink" class="form-control" placeholder="Link do Youtube" required />
+            <span asp-validation-for="YoutubeLink" class="text-danger"></span>
+        </div>
+
         <br/>
 
         <div class="row">
