--- a/ScreenMusic.Web/Pages/UpdateMusic.razor
+++ b/ScreenMusic.Web/Pages/UpdateMusic.razor
@@ -12,6 +12,7 @@
     <MudForm>
 
         <MudTextField Class="mt-4" T="string" Placeholder="Nome da música/canção" @bind-Value="name" Variant="Variant.Outlined" Required="true" RequiredError="Campo obrigatório." />
+        <MudTextField Class="mt-4" T="string" Placeholder="Link do Youtube" @bind-Value="youtubeLink" Variant="Variant.Outlined" Required="true" RequiredError="Campo obrigatório." />
 
         <MudSelect Class="mt-4" T="OutputArtist" Label="Artistas" Variant="Variant.Outlined" @bind-Value="Artist" ToStringFunc="GetArtistName">
             @if (ListArtist is not null)
@@ -49,6 +50,7 @@
 
 @code {
     private int releaseYear;
+    private string? youtubeLink;
     private string? name;
     private OutputMusicGenre? MusicGenre { get; set; }
     private OutputArtist? Artist { get; set; }
@@ -74,7 +76,7 @@
     {
         if (Artist != null && MusicGenre != null)
         {
-            var requestEdit = new InputUpdateMusic(name!, releaseYear, Artist.Id, MusicGenre.Id);
+            var requestEdit = new InputUpdateMusic(name!, releaseYear, Artist.Id, MusicGenre.Id, youtubeLink!);
             await musicServiceClient.Update(Music!.Id, requestEdit);
             navigationManager.NavigateTo("/MusicByArtist");
         }
