--- a/ScreenMusic.WebMvc/wwwroot/css/site.css
+++ b/ScreenMusic.WebMvc/wwwroot/css/site.css
@@ -56,3 +56,9 @@ body {
     height: calc(2.25rem + 2px); 
     border-radius: 0.25rem;
 }
+
+.card-video {
+    width: 100%;
+    height: 250px;
+    /*object-fit: cover;*/
+}
