--- a/ScreenMusic.WebMvc/Views/Music/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/Index.cshtml
@@ -15,7 +15,7 @@
             }
         </ul>
     </nav>
-    <a href="@Url.Action("Create", "Music")" class="btn btn-primary btn-lg">Criar Música</a>
+    <a class="btn btn-primary btn-lg" asp-action="Create" asp-controller="Music">Criar Música</a>
 </div>
 
 <div class="row">
