--- a/ScreenMusic.WebMvc/Views/Music/Update.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/Update.cshtml
@@ -15,6 +15,14 @@
 
         <br />
 
+        <div class="form-group">
+            <label asp-for="YoutubeLink">Link do Youtube</label>
+            <input asp-for="YoutubeLink" class="form-control" placeholder="Link do Youtube" required />
+            <span asp-validation-for="YoutubeLink" class="text-danger"></span>
+        </div>
+
+        <br/>
+
         <div class="row">
             <div class="col-md-4">
                 <div class="form-group">
