--- a/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
+++ b/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.5/datatables.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-<body>
+<body style="background-color: #3e3e3e">
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-2 sidebar">
@@ -20,22 +20,22 @@
                 <ul class="nav flex-column">
                     <li class="nav-item">
                         <a asp-area="" asp-controller="Home" asp-action="Index" class="nav-link">
-                            <i class="bi bi-house-fill"></i><span class="ms-1">Home</span>
+                            <i class="bi bi-house-fill"></i><span class="ms-1 text-white">Home</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a asp-area="" asp-controller="Artist" asp-action="Index" class="nav-link">
-                            <i class="bi bi-mic-fill"></i><span class="ms-1">Artista</span>
+                            <i class="bi bi-mic-fill"></i><span class="ms-1 text-white">Artista</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a asp-area="" asp-controller="Music" asp-action="Index" class="nav-link">
-                            <i class="bi bi-music-note-beamed"></i><span class="ms-1">Música</span>
+                            <i class="bi bi-music-note-beamed"></i><span class="ms-1 text-white">Música</span>
                         </a>
                     </li>
                     <li class="nav-item">
                         <a asp-area="" asp-controller="MusicGenre" asp-action="Index" class="nav-link">
-                            <i class="bi bi-vinyl-fill"></i><span class="ms-1">Gênero Musical</span>
+                            <i class="bi bi-vinyl-fill"></i><span class="ms-1 text-white">Gênero Musical</span>
                         </a>
                     </li>
                 </ul>
@@ -50,7 +50,7 @@
     </div>
 
     <footer class="border-top footer text-muted mt-3">
-        <div class="container">
+        <div class="container text-white">
             &copy; 2024 - ScreenMusic
         </div>
     </footer>
