--- a/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
@@ -1,6 +1,6 @@
 ﻿@model OutputMusic
 
-<div class="card h-100">
+<div class="card h-100 text-black">
     <iframe class="card-video" src="@Model.YoutubeLink" allowfullscreen></iframe>
     <div class="card-header">
         <h6 class="card-title">@Model.Artist!.Name - @Model.Name</h6>
