--- a/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/Artist/Index.cshtml
@@ -3,19 +3,22 @@
     ViewData["Title"] = "Artistas";
 }
 
-<div class="mt-4 mb-4 d-flex justify-content-between">
+<div class="mt-4 mb-4 d-flex justify-content-between align-items-center">
     <h4>Artistas</h4>
+
     <nav aria-label="Page navigation">
         <ul class="pagination">
             @for (int i = 1; i <= ViewBag.TotalPage; i++)
             {
                 <li class="page-item @(ViewBag.CurrentPage == i ? "active" : "")">
-                    <a class="page-link" asp-action="Index" asp-route-pageNumber="@i">@i</a>
+                    <a class="page-link" style="background-color: #9820b0; border-color: #9820b0;" asp-action="Index" asp-route-pageNumber="@i">@i</a>
                 </li>
             }
         </ul>
     </nav>
-    <a class="btn btn-primary btn-lg" asp-action="Create" asp-controller="Artist">Criar Artista</a>
+    <a class="btn btn-primary d-flex align-items-center justify-content-center btn-icon" asp-action="Create" asp-controller="Artist">
+        <i class="fas fa-plus"></i>
+    </a>
 </div>
 
 <div class="row">
