--- a/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
+++ b/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml
@@ -12,7 +12,7 @@
     <link href="https://cdn.datatables.net/v/dt/dt-1.13.5/datatables.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
 </head>
-<body style="background-color: #3e3e3e">
+<body style="background-color: #3e3e3e;">
     <div class="container">
         <div class="row">
             <div class="col-md-3 col-lg-2 sidebar">
@@ -49,7 +49,7 @@
         </div>
     </div>
 
-    <footer class="border-top footer text-muted mt-3">
+    <footer class="footer text-muted mt-3">
         <div class="container text-white">
             &copy; 2024 - ScreenMusic
         </div>
