--- a/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml.css
+++ b/ScreenMusic.WebMvc/Views/Shared/_Layout.cshtml.css
@@ -62,7 +62,7 @@ button.accept-policy {
     overflow-y: auto;
     transition: all 0.3s;
     background-color: #9820b0;
-    border-right: 1px solid #ddd;
+    border-right: 1px solid #AA1CC6;
     color: white;
 }
 
