--- a/ScreenMusic.WebMvc/wwwroot/css/site.css
+++ b/ScreenMusic.WebMvc/wwwroot/css/site.css
@@ -60,5 +60,20 @@ body {
 .card-video {
     width: 100%;
     height: 250px;
-    /*object-fit: cover;*/
 }
+
+.btn-icon {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    width: 40px;
+    height: 40px;
+    padding: 0;
+    background-color: #9820b0;
+    border-color: #9820b0;
+    color: white;
+}
+
+    .btn-icon i {
+        margin: 0;
+    }
