--- a/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
+++ b/ScreenMusic.WebMvc/Views/Music/_CardMusic.cshtml
@@ -21,7 +21,7 @@
                         <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
                     <div class="modal-body">
-                        Tem certeza que deseja excluir a música <strong>@Model.Name</strong>?
+                        Tem certeza que deseja excluir?
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
