--- a/ScreenMusic.WebMvc/Views/MusicGenre/Index.cshtml
+++ b/ScreenMusic.WebMvc/Views/MusicGenre/Index.cshtml
@@ -47,7 +47,7 @@
                                                 <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                                             </div>
                                             <div class="modal-body">
-                                                Tem certeza que deseja excluir o gênero musical <strong>@musicGenre.Name</strong>?
+                                                Tem certeza que deseja excluir?
                                             </div>
                                             <div class="modal-footer">
                                                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
