--- a/ScreenMusic.Web/Pages/Login.razor
+++ b/ScreenMusic.Web/Pages/Login.razor
@@ -1,40 +1,40 @@
 ﻿@page "/login"
 @using Microsoft.AspNetCore.Components.Authorization
-@inject AuthenticationServiceClient authenticationServiceClient
+@inject AuthenticationServiceClient AuthAPI
 
-<AuthorizeView>
-    <Authorized>
-        <p>Você está conectado como @context.User.Identity!.Name </p>
-    </Authorized>
-    <NotAuthorized>
-        <MudForm>
+<MudPaper Class="px-8 pt-2 pb-4 mx-16 my-8" Justify="Justify.Center">
+    <AuthorizeView>
+        <Authorized>
+            <p>Você está conectado como @context.User.Identity!.Name </p>
+        </Authorized>
+        <NotAuthorized>
+            <MudForm>
+                <MudTextField T="string" Label="Email" @bind-Value="email"
+                              Variant="Variant.Outlined" Class="my-4"
+                              Required="true" RequiredError="Email obrigatório!"
+                              OnlyValidateIfDirty="true" />
 
-            <MudTextField T="string" Label="Email" @bind-Value="email"
-                          Variant="Variant.Outlined" Class="my-4"
-                          Required="true" RequiredError="Email obrigatório!"
-                          OnlyValidateIfDirty="true" />
+                <MudTextField T="string" Label="Senha" @bind-Value="password"
+                              InputType="InputType.Password"
+                              Variant="Variant.Outlined" Class="my-4"
+                              Required="true" RequiredError="Senha obrigatória!"
+                              OnlyValidateIfDirty="true" />
 
-            <MudTextField T="string" Label="Senha" @bind-Value="password"
-                          InputType="InputType.Password"
-                          Variant="Variant.Outlined" Class="my-4"
-                          Required="true" RequiredError="Senha obrigatória!"
-                          OnlyValidateIfDirty="true" />
-
-            <MudButton Variant="Variant.Filled" Color="Color.Primary"
-                       Class="my-6" @onclick="FazerLogin">
-                Login
-            </MudButton>
-
-        </MudForm>
-    </NotAuthorized>
-</AuthorizeView>
+                <MudButton Variant="Variant.Filled" Color="Color.Primary"
+                           Class="my-6" @onclick="FazerLogin">
+                    Login
+                </MudButton>
+            </MudForm>
+        </NotAuthorized>
+    </AuthorizeView>
+</MudPaper>
 
 @code {
     private string? email;
     private string? password;
 
-    private async void FazerLogin()
+    private async Task FazerLogin()
     {
-        await authenticationServiceClient.LoginAsync(email!, password!);
+        await AuthAPI.LoginAsync(email, password);
     }
 }
