--- a/ScreenMusic.Web/Pages/Home.razor
+++ b/ScreenMusic.Web/Pages/Home.razor
@@ -1,3 +1,4 @@
 ﻿@page "/"
+@attribute [AllowAnonymous]
 
 <MudText Class="mt-8" Align="Align.Center" Typo="Typo.h3">Bem Vindo ao ScreenMusic</MudText>
