--- a/ScreenMusic.Web/_Imports.razor
+++ b/ScreenMusic.Web/_Imports.razor
@@ -1,5 +1,6 @@
 ﻿@using System.Net.Http
 @using System.Net.Http.Json
+@using Microsoft.AspNetCore.Authorization
 @using Microsoft.AspNetCore.Components.Forms
 @using Microsoft.AspNetCore.Components.Routing
 @using Microsoft.AspNetCore.Components.Web
@@ -12,3 +13,4 @@
 @using MudBlazor
 @using MudBlazor.Utilities
 @using ScreenMusic.Web.Components
+@attribute [Authorize]
